Gitlab/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`gitlab.danmanners.io`) && PathPrefix(`/admin/sidekiq`)
      kind: Rule
      services:
        - name: gitlab-webservice-default
          port: 8080
    - match: Host(`gitlab.danmanners.io`)
      kind: Rule
      services:
        - name: gitlab-webservice-default
          port: 8181
      middlewares:
        - name: https-redirectscheme
          namespace: default
  tls:
    secretName: gitlab-webservice-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.danmanners.io`)
      kind: Rule
      services:
        - name: gitlab-minio-svc
          port: 9000
  tls:
    secretName: gitlab-minio-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.danmanners.io`)
      kind: Rule
      services:
        - name: gitlab-registry
          port: 5000
  tls:
    secretName: gitlab-registry-tls
---
kind: IngressRouteTCP
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: gitlab-ssh
spec:
  entryPoints:
    - ssh
  routes:
    - kind: Rule
      match: HostSNI(`*`)
      services:
        - name: gitlab-gitlab-shell
          port: 22
